--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "ampify-prettier-config",
+  "name": "@Focusrite-Novation/ampify-prettier-config",
   "version": "1.0.0",
   "description": "",
   "main": "index.json",
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com "
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Focusrite-Novation/ampify-prettier-config.git"
   },
   "author": "",
   "license": "ISC"
