--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "husky": {
-    "hooks": {
-      "pre-push": "if git-branch-is master; then npm publish; fi"
-    }
-  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com "
   },
@@ -20,9 +15,5 @@
     "url": "git+https://github.com/Focusrite-Novation/ampify-prettier-config.git"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "git-branch-is": "^4.0.0",
-    "husky": "^4.3.7"
-  }
+  "license": "ISC"
 }
