--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@Focusrite-Novation/ampify-prettier-config",
-  "version": "1.1.1",
+  "version": "1.1.0",
   "description": "",
   "main": "index.json",
   "private": false,
   "scripts": {
+    "bump": "npx json -I -f package.json -e \"this.version='${VERSION}'\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -15,5 +16,8 @@
     "url": "git+https://github.com/Focusrite-Novation/ampify-prettier-config.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "json": "^10.0.0"
+  }
 }
