--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           password: $DOCKER_HUB_PASSWORD
     steps:
       - checkout
-      - run: VERSION=1.1.${CIRCLE_BUILD_NUM} npm run bump
+      - run: node bump.js
       - run: npm publish
 
 workflows:
